@@ -1,9 +1,11 @@
 package com.backendsyndicate.smashclub.common.security;
 
 import com.backendsyndicate.smashclub.admin.security.jwt.AdminJwtFilter;
+import com.backendsyndicate.smashclub.admin.security.ratelimit.AdminRateLimitFilter;
 import com.backendsyndicate.smashclub.admin.service.AdminAuthService;
 import com.backendsyndicate.smashclub.common.security.JwtService;
 import com.backendsyndicate.smashclub.auth.service.AuthService;
+import com.backendsyndicate.smashclub.common.config.OtherConfig;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Bean;
@@ -25,6 +27,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -33,6 +36,8 @@ public class SecurityConfiguration {
 
     @Autowired
     private AdminJwtFilter adminJwtFilter;
+    @Autowired
+    private AdminRateLimitFilter adminRateLimitFilter;
 
     @Autowired
     private AdminAuthService adminAuthService;
@@ -50,7 +55,7 @@ public class SecurityConfiguration {
     @Qualifier("customAuthenticationEntryPoint")
     private AuthenticationEntryPoint authenticationEntryPoint;
 
-<<<<<<< Updated upstream
+    //    @Autowired
 //    @Autowired
 //    private JwtFilter jwtFilter;
 //
@@ -66,8 +71,6 @@ public class SecurityConfiguration {
 //        403 -> Forbiden / Otorisasi
 //     */
 //
-=======
->>>>>>> Stashed changes
     @Bean
     public AuthenticationProvider cmsAuthenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(adminAuthService);
@@ -81,33 +84,37 @@ public class SecurityConfiguration {
     }
 
     /**
-     * CMS Admin Security Configuration
+     * CMS security procedure here
+     * @param http
+     * @return
+     * @throws Exception
      */
     @Bean
     @Order(1)
     public SecurityFilterChain cmsSecurityFilterChain(HttpSecurity http) throws Exception {
-<<<<<<< Updated upstream
         http.
                 csrf(AbstractHttpConfigurer::disable).
                 cors(cors -> cors.configurationSource(corsConfigurationSource())).
                 // Endpoints that need authorization
-                securityMatcher("/api/v1/admin/**").
+                        securityMatcher("/api/v1/admin/**").
                 authorizeHttpRequests(
-                       auth -> auth
-                               // Endpoints that open for public
-                               .requestMatchers(
-                                       "/api/v1/admin/auth/login",
-                                       // Test
-                                       "/api/v1/admin/sales/**",
-                                       "/api/v1/admin/refund-request/**"
-                               ).permitAll()
-                               .anyRequest().authenticated()
+                        auth -> auth
+                                // Endpoints that open for public
+                                .requestMatchers(
+                                        "/api/v1/admin/auth/login"
+                                        // Test
+//                                        "/api/v1/admin/sales/**",
+//                                        "/api/v1/admin/refund-request/**"
+                                )
+                                .permitAll()
+                                .anyRequest().authenticated()
                 ).
 //            headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable())). // Allow H2 console to run in a frame
 //                httpBasic(basic -> basic.authenticationEntryPoint(authenticationEntryPoint)).
-                exceptionHandling(exception -> exception.authenticationEntryPoint(authenticationEntryPoint)).
+        exceptionHandling(exception -> exception.authenticationEntryPoint(authenticationEntryPoint)).
                 sessionManagement(manager -> manager.sessionCreationPolicy(SessionCreationPolicy.STATELESS)).
                 authenticationProvider(cmsAuthenticationProvider()).
+                addFilterBefore(adminRateLimitFilter, UsernamePasswordAuthenticationFilter.class).
                 addFilterBefore(adminJwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -123,8 +130,6 @@ public class SecurityConfiguration {
     @Bean
     @Order(2)
     public SecurityFilterChain appSecurityFilterChain(HttpSecurity http) throws Exception {
-=======
->>>>>>> Stashed changes
         return http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
@@ -240,25 +245,11 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "https://smashclub-fe.vercel.app",
-                "https://smashclub-cms.vercel.app"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
-        configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Disposition"
-        ));
+
+        configuration.setAllowedOrigins(
+                Arrays.asList(OtherConfig.getCorsUrlAllowed().split(",")));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
